Fixed horizontal scroll

--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body {
 	background-color: lightcyan;
 	font-size: 1.2rem;
 	text-align: center;
+	padding: 0;
+	margin: 0;
 }
 #tree, #snow {
 	position: absolute;
@@ -29,6 +31,7 @@ body {
 	display: flex;
 	justify-content: center;
 	max-width: 100%;
+	overflow: hidden;
 	z-index: 100;
 }
 pre {
@@ -137,8 +140,8 @@ a {
 }
 @media only screen and (max-width: 800px) {
 	#sidebar {
-		width: 100%;
-		left: -100%;
+		width: 100vw;
+		left: -100vw;
 		background: lightcyan;
 	}
 }
